Fix distorted post card images (issue #808) (#819)

--- a/assets/styles/components/cards.scss
+++ b/assets/styles/components/cards.scss
@@ -22,6 +22,7 @@
   }
 
   .card-img-top {
+    object-fit: cover;
     @include transition();
   }
 
@@ -59,6 +60,7 @@
     &:focus {
       .card-img-top {
         transform: scale(1.2);
+        object-fit: cover;
         @include transition();
       }
     }
